# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "acl_table_test",
    srcs = ["acl_table_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto",
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:ir_cc_proto",
        "//p4_pdpi:pd",
        "//p4rt_app/tests/lib:app_db_entry_builder",
        "//p4rt_app/tests/lib:p4runtime_component_test_fixture",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "arbitration_test",
    srcs = ["arbitration_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:status",
        "//gutil:status_matchers",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_grpc",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "action_set_test",
    srcs = ["action_set_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto",
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4rt_app/tests/lib:app_db_entry_builder",
        "//p4rt_app/tests/lib:p4runtime_component_test_fixture",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "critical_state_test",
    srcs = ["critical_state_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:ir",
        "//p4rt_app/tests/lib:p4runtime_component_test_fixture",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "fixed_l3_tables_test",
    srcs = ["fixed_l3_tables_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto",
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:ir_cc_proto",
        "//p4rt_app/tests/lib:app_db_entry_builder",
        "//p4rt_app/tests/lib:p4runtime_component_test_fixture",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "forwarding_pipeline_config_test",
    srcs = ["forwarding_pipeline_config_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:entity_management",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "hashing_test",
    srcs = ["hashing_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4rt_app/sonic:hashing",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "packetio_test",
    srcs = ["packetio_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto",
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:pd",
        "//p4_pdpi/string_encodings:hex_string",
        "//p4rt_app/sonic:fake_packetio_interface",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "port_name_and_id_test",
    srcs = ["port_name_and_id_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "response_path_test",
    srcs = ["response_path_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto",
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4rt_app/tests/lib:app_db_entry_builder",
        "//p4rt_app/tests/lib:p4runtime_component_test_fixture",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@sonic_swss_common//tests/fakes:fake_sonic_db_table",
    ],
)

cc_test(
    name = "role_test",
    srcs = ["role_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/fixed:p4_roles",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:p4_roles",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_grpc",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "vrf_table_test",
    srcs = ["vrf_table_test.cc"],
    tags = ["exclusive"],
    deps = [
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//p4_pdpi:entity_management",
        "//p4rt_app/tests/lib:app_db_entry_builder",
        "//p4rt_app/tests/lib:p4runtime_component_test_fixture",
        "//p4rt_app/tests/lib:p4runtime_grpc_service",
        "//p4rt_app/tests/lib:p4runtime_request_helpers",
        "//sai_p4/instantiations/google:instantiations",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@sonic_swss_common//tests/fakes:fake_sonic_db_table",
    ],
)
