load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//p4_pdpi/testing:diff_test.bzl", "cmd_diff_test", "diff_test")
load("//p4_pdpi:pdgen.bzl", "p4_pd_proto")
load("@com_github_p4lang_p4c//:bazel/p4_library.bzl", "p4_library")

# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "table_utility",
    srcs = ["table_utility.cc"],
    hdrs = ["table_utility.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//gutil:status",
        "//p4_pdpi:ir_cc_proto",
        "//p4_pdpi/utils:annotation_parser",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "table_utility_test",
    srcs = ["table_utility_test.cc"],
    deps = [
        ":table_utility",
        "//p4_pdpi:ir_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "status_utility",
    srcs = ["status_utility.cc"],
    hdrs = ["status_utility.h"],
    deps = [
        "//p4_pdpi:ir_cc_proto",
        "@com_google_absl//absl/status",
    ],
)

cc_library(
    name = "ir_builder",
    testonly = 1,
    hdrs = ["ir_builder.h"],
    deps = [
        "//p4_pdpi:ir_cc_proto",
        "@com_google_protobuf//:protobuf",
    ],
)
