# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//p4_pdpi/testing:diff_test.bzl", "cmd_diff_test", "diff_test")
load("//p4_pdpi:pdgen.bzl", "p4_pd_proto")
load("@com_github_p4lang_p4c//:bazel/p4_library.bzl", "p4_library")

package(
    licenses = ["notice"],
)

filegroup(
    name = "fixed",
    srcs = [
        "headers.p4",
        "ids.h",
        "ipv4_checksum.p4",
        "l3_admit.p4",
        "metadata.p4",
        "mirroring_clone.p4",
        "mirroring_encap.p4",
        "packet_rewrites.p4",
        "parser.p4",
        "resource_limits.p4",
        "routing.p4",
        "ttl.p4",
    ],
    visibility = [
        "//sai_p4/instantiations/google:__pkg__",
    ],
)

cc_library(
    name = "p4_ids",
    hdrs = ["ids.h"],
    visibility = [
        "//platforms/networking/gpins/testing/blackbox/p4:__pkg__",
        "//sai_p4/instantiations/google:__pkg__",
    ],
)
