# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

filegroup(
    name = "fixed",
    srcs = [
        "bitwidths.p4",
        "headers.p4",
        "ids.h",
        "ipv4_checksum.p4",
        "l3_admit.p4",
        "metadata.p4",
        "minimum_guaranteed_sizes.p4",
        "mirroring_clone.p4",
        "mirroring_encap.p4",
        "packet_rewrites.p4",
        "parser.p4",
        "roles.h",
        "routing.p4",
        "ttl.p4",
    ],
    visibility = [
        "//sai_p4/instantiations/google:__pkg__",
    ],
)

cc_library(
    name = "p4_ids",
    hdrs = ["ids.h"],
    visibility = [
        "//p4_fuzzer:__pkg__",
        "//platforms/networking/gpins/testing/blackbox/p4:__pkg__",
        "//sai_p4/instantiations/google:__pkg__",
    ],
)

cc_library(
    name = "p4_roles",
    hdrs = ["roles.h"],
    visibility = [
        "//p4_fuzzer:__pkg__",
        "//p4_pdpi:__pkg__",
        "//p4rt_app/p4runtime:__pkg__",
        "//p4rt_app/tests:__pkg__",
        "//platforms/networking/orion/core/sfe/common/p4:__pkg__",
        "//sai_p4/instantiations/google:__pkg__",
        "//tests/forwarding:__pkg__",
    ],
)
