load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//p4_pdpi/testing:diff_test.bzl", "cmd_diff_test", "diff_test")
load("//p4_pdpi:pdgen.bzl", "p4_pd_proto")
load("@com_github_p4lang_p4c//:bazel/p4_library.bzl", "p4_library")

package(
    licenses = ["notice"],
)

cc_library(
    name = "test_data",
    testonly = True,
    srcs = ["test_data.cc"],
    hdrs = ["test_data.h"],
    deps = [
        "//gutil:testing",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "p4_blackbox_fixture",
    testonly = True,
    hdrs = ["p4_blackbox_fixture.h"],
    deps = [
        "//gutil:status_matchers",
        "//p4_pdpi:connection_management",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:pd",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//thinkit:mirror_testbed",
        "//thinkit:mirror_testbed_fixture",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "smoke_test",
    testonly = True,
    srcs = ["smoke_test.cc"],
    hdrs = ["smoke_test.h"],
    visibility = ["//platforms/networking/gpins/testing/blackbox/p4:__pkg__"],
    deps = [
        ":p4_blackbox_fixture",
        ":test_data",
        "//gutil:proto_matchers",
        "//gutil:status_matchers",
        "//gutil:testing",
        "//p4_pdpi:entity_management",
        "//p4_pdpi:pd",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//thinkit:mirror_testbed_fixture",
        "@com_google_googletest//:gtest_main",
    ],
    alwayslink = True,
)
